--- a/index.html
+++ b/index.html
@@ -1,88 +1,104 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
-    <title>Owen Dodd</title>
-    <link rel="icon" type="image/png" href="/assets/favicon.png" />
-    <link rel="stylesheet" type="text/css" href="../assets/css/home.min.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
-      rel="stylesheet"
-    />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-86134698-1"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
 
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <title>Owen Dodd</title>
+  <link rel="icon" type="image/png" href="/assets/favicon.png" />
+  <link rel="stylesheet" type="text/css" href="../assets/css/home.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-86134698-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
-      gtag("config", "UA-86134698-1");
-    </script>
-  </head>
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
 
-  <body>
+    gtag("config", "UA-86134698-1");
+  </script>
+</head>
 
-    <header>
-      <div class="menu">
-        <div class="menu-icon">
-          <div class="bar one"></div>
-          <div class="bar two"></div>
-        </div>
-        <a href="/" class="nameplate">
-          <h1 class="desktop">
-            Office of Owen Dodd</br>
-            Copenhagen & New York
-          </h1>
-          <h1 class="mobile">
-            Owen Dodd</br>
-            CPH, NYC
-          </h1>
-        </a>
-        <a class="menu-item info" href="/"><h1>Information</h1></a>
-        <a class="menu-item info" href="/product-design"><h1>Product Design</h1></a>
-        <!-- <a class="menu-item info" href=""><h1>Photography</h1></a>
-        <a class="menu-item info" href=""><h1>Other Projects</h1></a> -->
+<body>
+
+  <header>
+    <a href="/" class="nameplate">
+      <h2 class="desktop">
+        Office of Owen Dodd</br>
+        Copenhagen & New York
+      </h2>
+      <h2 class="mobile">
+        Owen Dodd</br>
+        CPH, NYC
+      </h2>
+    </a>
+    <div class="menu">
+      <a class="menu-item info" href="/">
+        <h2>Information</h2>
+      </a>
+      <a class="menu-item info" href="/product-design">
+        <h2>Product Design</h2>
+      </a>
+      <!-- <a class="menu-item info" href=""><h2>Photography</h2></a>
+        <a class="menu-item info" href=""><h2>Other Projects</h2></a> -->
+      <div class="menu-icon">
+        <div class="bar one"></div>
+        <div class="bar two"></div>
       </div>
-    </header>
+    </div>
+    </div>
+  </header>
+  <div class="content">
 
-    <div class="content">
+    <!-- <section class="head">
+      <h1>Information</h1>
+      <img src="./assets/imgs/forest.jpeg" alt="">
+    </section> -->
 
-      <section class="intro">
-        <p>
-          I'm a strategic designer building systems, tools, and interfaces.
-        </p>
+    <section class="body">
+      <p>
+        I’m a product designer currently working at <a href="https://cooking.nytimes.com/">NYT Cooking</a> focused on
+        shaping our content ecosystem and developing our design systems.
+      </p>
+      <p>
+        Previously, I’ve developed workflow tools and iniated internal design systems for the newsroom within <a
+          href="https://www.nytimes.com/">The New York Times</a>. And while at <a
+          href="https://www.artsy.net/">Artsy</a>, I led design and product for the Editorial team, directed the show
+        browsing experience for Artsy’s iOS App and worked across on inventory managment tools for galleries.
+      </p>
+      <p>Additionally, I take on projects in food and natural wine space, make photographs, and occasionally develop
+        websites for small businesses. </p>
+      <p>
+        Please <a href="mailto:mail@owendodd.com">reach out</a> to discuss any potential projects or collaborations.
+      </p>
+    </section>
+  </div>
 
-        <p>Currently I'm working on the content ecosystem at
-          <a href="https://cooking.nytimes.com/">NYT Cooking</a> and am living between Copenhagen and New York.</p>
-        <p>
-          Previously I've spent time developing design systems within
-          <a href="https://www.nytimes.com/">The New York Times</a>, designing
-          the editorial experience at
-          <a href="https://www.artsy.net/">Artsy</a>, as well as developing numerous independent projects spanning identity, print and web design.
-        </p>
-        <!-- <p>
-          Additional projects include: making fruit preserves with Kasia Sznajder at
-          <a href="https://okjams.com/">O.K. Jams</a>, pop-up food and wine projects as
-          <a href="https://jzujfood.com/">Jzuj Food</a>, and publishing ecologically focused art books as a part of
-          <a href="http://solar-power.press/">Solar Power Press</a>.
-        </p> -->
-        <p>
-          Feel free to <a href="mailto:mail@owendodd.com">get in touch</a> to discuss any potential web based projects, collaborations, or just to say hello. 
-        </p>
-      </section>
+  <footer>
+    <div class="link-menu">
+      <div class="link-icon">
+        <h2>Links</h2>
+      </div>
+      <a class="link-item" href="mailto:mail@owendodd.com">
+        <h2>mail@owendodd.com</h2>
+      </a>
+      <a class="link-item" href="https://www.instagram.com/owendodd/">
+        <h2>instagram.com/owendodd</h2>
+      </a>
+      <a class="link-item" href="https://www.are.na/owen-dodd/">
+        <h2>are.na/owen-dodd</h2>
+      </a>
+      <a class="link-item" href="https://www.linkedin.com/in/ododd/">
+        <h2>linkedin.com/in/ododd</h2>
+      </a>
+    </div>
+  </footer>
 
-      <section class="info-block">
+  <!-- <section class="info-block">
         <div class="contact-block">
           <div class="contact-row">
             <h3 class="label">US</h3>
@@ -93,7 +109,7 @@
             <h3>+45 31 48 98 93</h3>
           </div>
           <div class="contact-row">
-            <h3><a href="mailto:mail@owendodd.com">mail@owendodd.com</a></h3>
+            <h3>mail@owendodd.com</a></h3>
           </div>
         </div>
 
@@ -112,8 +128,9 @@
         </div>
       </section>
       
-    </div>
+    </div> -->
 
-    <script type="text/javascript" src="/assets/js/script.js"></script>
-  </body>
+  <script type="text/javascript" src="/assets/js/script.js"></script>
+</body>
+
 </html>
