--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
   </header>
   <div class="content">
 
-    <!-- <section class="head">
-      <h1>Information</h1>
-      <img src="./assets/imgs/forest.jpeg" alt="">
-    </section> -->
+    <section class="head">
+      <h1>Systems, interfaces, and tools</h1>
+      <!-- <img src="./assets/imgs/forest.jpeg" alt=""> -->
+    </section>
 
     <section class="body">
       <p>
@@ -76,59 +76,27 @@
         Please <a href="mailto:mail@owendodd.com">reach out</a> to discuss any potential projects or collaborations.
       </p>
     </section>
-  </div>
 
-  <footer>
-    <div class="link-menu">
-      <div class="link-icon">
-        <h2>Links</h2>
+    <footer>
+      <div class="link-menu">
+        <!-- <div class="link-icon">
+          <h2>Links</h2>
+        </div> -->
+        <a class="link-item" href="mailto:mail@owendodd.com">
+          <h2>mail@owendodd.com</h2>
+        </a>
+        <a class="link-item" href="https://www.instagram.com/owendodd/">
+          <h2>instagram.com/owendodd</h2>
+        </a>
+        <a class="link-item" href="https://www.are.na/owen-dodd/">
+          <h2>are.na/owen-dodd</h2>
+        </a>
+        <a class="link-item" href="https://www.linkedin.com/in/ododd/">
+          <h2>linkedin.com/in/ododd</h2>
+        </a>
       </div>
-      <a class="link-item" href="mailto:mail@owendodd.com">
-        <h2>mail@owendodd.com</h2>
-      </a>
-      <a class="link-item" href="https://www.instagram.com/owendodd/">
-        <h2>instagram.com/owendodd</h2>
-      </a>
-      <a class="link-item" href="https://www.are.na/owen-dodd/">
-        <h2>are.na/owen-dodd</h2>
-      </a>
-      <a class="link-item" href="https://www.linkedin.com/in/ododd/">
-        <h2>linkedin.com/in/ododd</h2>
-      </a>
-    </div>
-  </footer>
-
-  <!-- <section class="info-block">
-        <div class="contact-block">
-          <div class="contact-row">
-            <h3 class="label">US</h3>
-            <h3>+1 303 819 0844</h3>
-          </div>
-          <div class="contact-row">
-            <h3 class="label">EU</h3>
-            <h3>+45 31 48 98 93</h3>
-          </div>
-          <div class="contact-row">
-            <h3>mail@owendodd.com</a></h3>
-          </div>
-        </div>
-
-        <div class="contact-block">
-          <div class="contact-row">
-            <h3><a href="https://www.instagram.com/owendodd/">instagram.com/owendodd</a></h3>
-          </div>
-          <div class="contact-row">
-            <h3><a href="https://www.are.na/owen-dodd/">are.na/owen-dodd</a></h3>
-          </div>
-          <div class="contact-row">
-            <h3><a href="https://www.linkedin.com/in/ododd/">linkedin.com/in/ododd</a></h3>
-          </div>
-        </div>
-
-        </div>
-      </section>
-      
-    </div> -->
+    </footer>
+  </div>
 
   <script type="text/javascript" src="/assets/js/script.js"></script>
 </body>
