--- a/index.html
+++ b/index.html
@@ -26,37 +26,34 @@
 <body>
 
   <header>
-    <a href="/" class="nameplate">
-      <h2 class="desktop">
-        Office of Owen Dodd</br>
-        Copenhagen & New York
-      </h2>
-      <h2 class="mobile">
-        Owen Dodd</br>
-        CPH, NYC
-      </h2>
-    </a>
     <div class="menu">
+      <div class="menu-icon">
+        <div class="bar one"></div>
+        <div class="bar two"></div>
+      </div>
+      <a href="/" class="nameplate">
+        <h2 class="desktop">
+          Office of Owen Dodd</br>
+          Copenhagen & New York
+        </h2>
+        <h2 class="mobile">
+          Owen Dodd</br>
+          CPH, NYC
+        </h2>
+      </a>
       <a class="menu-item info" href="/">
         <h2>Information</h2>
       </a>
       <a class="menu-item info" href="/product-design">
         <h2>Product Design</h2>
       </a>
-      <!-- <a class="menu-item info" href=""><h2>Photography</h2></a>
-        <a class="menu-item info" href=""><h2>Other Projects</h2></a> -->
-      <div class="menu-icon">
-        <div class="bar one"></div>
-        <div class="bar two"></div>
-      </div>
-    </div>
     </div>
   </header>
-  <div class="content">
 
+  <div class="content">
     <section class="head">
       <h1>Systems, interfaces, and tools</h1>
-      <!-- <img src="./assets/imgs/forest.jpeg" alt=""> -->
+      <img src="./assets/imgs/forest.jpeg" alt="">
     </section>
 
     <section class="body">
@@ -76,27 +73,27 @@
         Please <a href="mailto:mail@owendodd.com">reach out</a> to discuss any potential projects or collaborations.
       </p>
     </section>
-
-    <footer>
-      <div class="link-menu">
-        <!-- <div class="link-icon">
-          <h2>Links</h2>
-        </div> -->
-        <a class="link-item" href="mailto:mail@owendodd.com">
-          <h2>mail@owendodd.com</h2>
-        </a>
-        <a class="link-item" href="https://www.instagram.com/owendodd/">
-          <h2>instagram.com/owendodd</h2>
-        </a>
-        <a class="link-item" href="https://www.are.na/owen-dodd/">
-          <h2>are.na/owen-dodd</h2>
-        </a>
-        <a class="link-item" href="https://www.linkedin.com/in/ododd/">
-          <h2>linkedin.com/in/ododd</h2>
-        </a>
-      </div>
-    </footer>
   </div>
+
+  <footer>
+    <div class="link-menu">
+      <!-- <div class="link-icon">
+        <h2>Links</h2>
+      </div> -->
+      <a class="link-item" href="mailto:mail@owendodd.com">
+        <h2>mail@owendodd.com</h2>
+      </a>
+      <a class="link-item" href="https://www.instagram.com/owendodd/">
+        <h2>instagram.com/owendodd</h2>
+      </a>
+      <a class="link-item" href="https://www.are.na/owen-dodd/">
+        <h2>are.na/owen-dodd</h2>
+      </a>
+      <a class="link-item" href="https://www.linkedin.com/in/ododd/">
+        <h2>linkedin.com/in/ododd</h2>
+      </a>
+    </div>
+  </footer>
 
   <script type="text/javascript" src="/assets/js/script.js"></script>
 </body>
