--- a/product-design/city-guide/index.html
+++ b/product-design/city-guide/index.html
@@ -2,156 +2,187 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Owen Dodd</title>
-    <link rel="icon" type="image/png" href="/assets/favicon.png" />
-    <link rel="stylesheet" type="text/css" href="/assets/css/home.min.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-86134698-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <title>Owen Dodd</title>
+  <link rel="icon" type="image/png" href="/assets/favicon.png" />
+  <link rel="stylesheet" type="text/css" href="/assets/css/home.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-86134698-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag("js", new Date());
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
 
-        gtag("config", "UA-86134698-1");
-    </script>
+    gtag("config", "UA-86134698-1");
+  </script>
 </head>
 
 <body>
 
-    <header>
-        <div class="menu">
-            <div class="menu-icon">
-                <div class="bar one"></div>
-                <div class="bar two"></div>
-            </div>
-            <a href="/" class="nameplate">
-              <h1>
-                Office of Owen Dodd</br>
-                Copenhagen & New York
-              </h1>
-            </a>
-            <a class="menu-item info" href="/">
-                <h1>Information</h1>
-            </a>
-            <a class="menu-item info" href="/product-design">
-                <h1>Product Design</h1>
-            </a>
-            <!-- <a class="menu-item info" href="">
-                <h1>Photography</h1>
-            </a>
-            <a class="menu-item info" href="">
-                <h1>Other Projects</h1>
-            </a> -->
-        </div>
-    </header>
+  <header>
+    <div class="menu">
+      <div class="menu-icon">
+        <div class="bar one"></div>
+        <div class="bar two"></div>
+      </div>
+      <a href="/" class="nameplate">
+        <h2 class="desktop">
+          Office of Owen Dodd</br>
+          Copenhagen & New York
+        </h2>
+        <h2 class="mobile">
+          Owen Dodd</br>
+          CPH, NYC
+        </h2>
+      </a>
+      <a class="menu-item info" href="/">
+        <h2>Information</h2>
+      </a>
+      <a class="menu-item info" href="/product-design">
+        <h2>Product Design</h2>
+      </a>
+    </div>
+  </header>
 
-    <div class="content">
-  <section class="intro">
-    <div class="img-wrapper header">
+  <div class="content">
+    <section class="head">
+      <h1>Artsy City Guide</h1>
       <img src="./assets/city guide header.png" alt="Artsy City Guide" />
+    </section>
+
+    <section>
+      <p>
+        The Artsy City Guide was created to enable our user-base to easily discover and visit art in the physical world.
+        The digital experience allows users to follow artists, galleries and museums for updates on new shows, and to
+        navigate these shows in our 6 launch cities. The product was built as part of an on-going partnership with BMW
+        and was integrated into our existing iOS app.
+      </p>
+    </section>
+
+    <section>
+      <h2>Background</h2>
+      <p>The Artsy iOS app has existed since 2015 as a tool for art enthusiasts to browse and save artworks, follow
+        artists, and explore fairs, galleries and museums. The app experience was ultimately aimed at enabling
+        collectors to purchase works of art via conversations with galleries and by bidding in auctions.</p>
+      <div class="img-wrapper">
+        <video autoplay loop muted>
+          <source src="./assets/appv1.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+      </div>
+    </section>
+
+    <section>
+      <h2>Opportunity definition</h2>
+      <p>The Artsy iOS app has consistently been one of the primary drivers of commercial activity but was falling short
+        of retention and engagement goals. Previous collector research had indicated that while most collectors don't
+        usually purchase works on a highly regular basis, they are consistently visiting galleries, museums and fairs.
+      </p>
+      <p>After completing an in-depth competitor analysis, we saw a large opportunity to create a product with a more
+        seamless and comprehensive user-experience, leveraging both our existing commercial infrastructure and
+        personalization layers, neither of which existed in competitive products.</p>
+      <p>These inputs led us to believe that creating a product focused on the exploration of shows and
+        fairs could increase our app engagement while simultaneously enhancing collectors commercial experience.</p>
+      <div class="img-wrapper">
+        <img src="./assets/city guide competitors.png" alt="Artsy City Guide" />
+      </div>
+
+    </section>
+
+    <section>
+      <h2>Research</h2>
+      <p>To further understand the specific collector needs we conducted a series of user interviews. Each conversation
+        was focused on
+        highlighting the relationship between a collectors commercial behavior and their show-visiting habits. With each
+        subject we discussed what factors influenced their decisions to visit (or not visit) a show or fair, what key
+        information they relied on, and what tools they used to assist throughout their process.</p>
+      <div class="img-wrapper">
+        <img src="./assets/city guide interviews.png" alt="Artsy City Guide" />
+      </div>
+      <p>These conversations reinforced some of our initial assumptions around the importance of personalization and
+        robust information on the artists, galleries, and museums associated with shows. They also highlighted the
+        importance of social validation and reccomendations throughout the show discovery process, which will be
+        explored in
+        subsequent iterations of the app.</p>
+    </section>
+
+    <section>
+      <h2>Exploration and iteration</h2>
+      <p>After developing an initial understanding of our opportunity with key stakeholders, we began developing the
+        information architecture and structure of the app through a series of wireframes. These explorations were
+        continuously assessed by our internal teams and tweaked based on feedback.</p>
+      <div class="img-wrapper">
+        <img src="./assets/city wireframes.png" alt="Artsy City Guide" />
+      </div>
+      <p>Simultaneously we began to explore a number of key screens, and iterate on various components. These
+        explorations were then evaluated by internal teams and reconciled with our existing UX patterns and visual
+        language.</p>
+      <div class="img-wrapper">
+        <img src="./assets/city switcher explorations.png" alt="Artsy City Guide" />
+      </div>
+
+    </section>
+
+    <section n>
+      <h2>Design</h2>
+      <p>The core app experience is based around 6 initial launch locations. When location services are enabled for
+        users within these cities, they are automatically placed in their respective city view, with the ability to
+        quickly switch to other locations via the dropdown menu. The feature set will quickly be expanded to support
+        wider geographic areas as we scale.</p>
+      <div class="img-wrapper">
+        <img src="./assets/city and switcher.png" alt="Artsy City Guide" />
+      </div>
+      <p>The home view of each city offers a variety of entry points into the wide range of shows and fairs, organized
+        into time sensitive, personalized, and curated content buckets.</p>
+      <div class="img-wrapper">
+        <img src="./assets/city guide home organization.png" alt="Artsy City Guide" />
+      </div>
+      <p>The map view for each city allows users to quickly place themselves in relation to the events around them.
+        Specific UI considerations were implemented to allow for easy browsing of multiple events in dense areas.</p>
+      <div class="img-wrapper">
+        <img src="./assets/city guide map.png" alt="Artsy City Guide" />
+      </div>
+      <p>New fair views allow users to browse and search by artists, exhibitors (galleries), or works. Additional
+        information about the fair location and other programming is also available on the overview page.</p>
+      <div class="img-wrapper">
+        <img src="./assets/city guide fair.png" alt="Artsy City Guide" />
+      </div>
+      <p>The show view surfaces installation shots and works included in the show, along with additional information
+        provided by the gallery. This view is integrated with our existing artist and artwork infrastructure.</p>
+      <div class="img-wrapper">
+        <img src="./assets/city guide show.png" alt="Artsy City Guide" />
+      </div>
+    </section>
+
+    <section>
+      <h2>Analysis</h2>
+      <p>Preliminary results since our launch of the app have surpassed initial goals for account creation and have
+        resulted in the highest number of monthly commercial interactions within the app to date.</p>
+    </section>
+  </div>
+
+  <footer>
+    <div class="link-menu">
+      <a class="link-item" href="mailto:mail@owendodd.com">
+        <h2>mail@owendodd.com</h2>
+      </a>
+      <a class="link-item" href="https://www.instagram.com/owendodd/">
+        <h2>instagram.com/owendodd</h2>
+      </a>
+      <a class="link-item" href="https://www.are.na/owen-dodd/">
+        <h2>are.na/owen-dodd</h2>
+      </a>
+      <a class="link-item" href="https://www.linkedin.com/in/ododd/">
+        <h2>linkedin.com/in/ododd</h2>
+      </a>
     </div>
-    <h3>Artsy City Guide</h3>
-    <p>
-      The Artsy City Guide was created to enable our user-base to easily discover and visit art in the physical world.
-      The digital experience allows users to follow artists, galleries and museums for updates on new shows, and to
-      navigate these shows in our 6 launch cities. The product was built as part of an on-going partnership with BMW
-      and was integrated into our existing iOS app.
-    </p>
-  </section>
-
-
-
-  <section class="intro">
-    <h3>Background</h3>
-    <p>The Artsy iOS app has existed since 2015 as a tool for art enthusiasts to browse and save artworks, follow
-      artists, and explore fairs, galleries and museums. The app experience was ultimately aimed at enabling
-      collectors to purchase works of art via conversations with galleries and by bidding in auctions.</p>
-    <div class="img-wrapper">
-      <video autoplay loop muted>
-        <source src="./assets/appv1.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
-    </div>
-  </section>
-
-  <section class="intro">
-    <h3>Opportunity definition</h3>
-    <p>The Artsy iOS app has consistently been one of the primary drivers of commercial activity but was falling short of retention and engagement goals. Previous collector research had indicated that while most collectors don't usually purchase works on a highly regular basis, they are consistently visiting galleries, museums and fairs.</p>
-    <p>After completing an in-depth competitor analysis, we saw a large opportunity to create a product with a more
-      seamless and comprehensive user-experience, leveraging both our existing commercial infrastructure and
-      personalization layers, neither of which existed in competitive products.</p>
-    <p>These inputs led us to believe that creating a product focused on the exploration of shows and
-      fairs could increase our app engagement while simultaneously enhancing collectors commercial experience.</p>
-    <div class="img-wrapper">
-      <img src="./assets/city guide competitors.png" alt="Artsy City Guide" />
-    </div>
-
-  </section>
-
-  <section class="intro">
-    <h3>Research</h3>
-    <p>To further understand the specific collector needs we conducted a series of user interviews. Each conversation was focused on
-      highlighting the relationship between a collectors commercial behavior and their show-visiting habits. With each
-      subject we discussed what factors influenced their decisions to visit (or not visit) a show or fair, what key information they relied on, and what tools they used to assist throughout their process.</p>
-    <div class="img-wrapper">
-      <img src="./assets/city guide interviews.png" alt="Artsy City Guide" />
-    </div>
-    <p>These conversations reinforced some of our initial assumptions around the importance of personalization and
-      robust information on the artists, galleries, and museums associated with shows. They also highlighted the
-      importance of social validation and reccomendations throughout the show discovery process, which will be explored in
-      subsequent iterations of the app.</p>
-  </section>
-
-  <section class="intro">
-    <h3>Exploration and iteration</h3>
-    <p>After developing an initial understanding of our opportunity with key stakeholders, we began developing the information architecture and structure of the app through a series of wireframes. These explorations were continuously assessed by our internal teams and tweaked based on feedback.</p>
-    <div class="img-wrapper">
-      <img src="./assets/city wireframes.png" alt="Artsy City Guide" />
-    </div>
-    <p>Simultaneously we began to explore a number of key screens, and iterate on various components. These explorations were then evaluated by internal teams and reconciled with our existing UX patterns and visual language.</p>
-    <div class="img-wrapper">
-      <img src="./assets/city switcher explorations.png" alt="Artsy City Guide" />
-    </div>
-
-  </section>
-
-  <section class="intro"n>
-    <h3>Design</h3>
-    <p>The core app experience is based around 6 initial launch locations. When location services are enabled for users within these cities, they are automatically placed in their respective city view, with the ability to quickly switch to other locations via the dropdown menu. The feature set will quickly be expanded to support wider geographic areas as we scale.</p>
-    <div class="img-wrapper">
-      <img src="./assets/city and switcher.png" alt="Artsy City Guide" />
-    </div>
-    <p>The home view of each city offers a variety of entry points into the wide range of shows and fairs, organized into time sensitive, personalized, and curated content buckets.</p>
-    <div class="img-wrapper">
-      <img src="./assets/city guide home organization.png" alt="Artsy City Guide" />
-    </div>
-    <p>The map view for each city allows users to quickly place themselves in relation to the events around them. Specific UI considerations were implemented to allow for easy browsing of multiple events in dense areas.</p>
-    <div class="img-wrapper">
-      <img src="./assets/city guide map.png" alt="Artsy City Guide" />
-    </div>
-    <p>New fair views allow users to browse and search by artists, exhibitors (galleries), or works. Additional information about the fair location and other programming is also available on the overview page.</p>
-    <div class="img-wrapper">
-      <img src="./assets/city guide fair.png" alt="Artsy City Guide" />
-    </div>
-    <p>The show view surfaces installation shots and works included in the show, along with additional information provided by the gallery. This view is integrated with our existing artist and artwork infrastructure.</p>
-    <div class="img-wrapper">
-      <img src="./assets/city guide show.png" alt="Artsy City Guide" />
-    </div>
-  </section>
-
-  <section class="intro">
-    <h3>Analysis</h3>
-    <p>Preliminary results since our launch of the app have surpassed initial goals for account creation and have resulted in the highest number of monthly commercial interactions within the app to date.</p>
-  </section>
-
-
+  </footer>
 
 
   <script type="text/javascript" src="/assets/js/script.js"></script>
