--- a/product-design/index.html
+++ b/product-design/index.html
@@ -26,30 +26,27 @@
 <body>
 
   <header>
-    <a href="/" class="nameplate">
-      <h2 class="desktop">
-        Office of Owen Dodd</br>
-        Copenhagen & New York
-      </h2>
-      <h2 class="mobile">
-        Owen Dodd</br>
-        CPH, NYC
-      </h2>
-    </a>
     <div class="menu">
+      <div class="menu-icon">
+        <div class="bar one"></div>
+        <div class="bar two"></div>
+      </div>
+      <a href="/" class="nameplate">
+        <h2 class="desktop">
+          Office of Owen Dodd</br>
+          Copenhagen & New York
+        </h2>
+        <h2 class="mobile">
+          Owen Dodd</br>
+          CPH, NYC
+        </h2>
+      </a>
       <a class="menu-item info" href="/">
         <h2>Information</h2>
       </a>
       <a class="menu-item info" href="/product-design">
         <h2>Product Design</h2>
       </a>
-      <!-- <a class="menu-item info" href=""><h2>Photography</h2></a>
-        <a class="menu-item info" href=""><h2>Other Projects</h2></a> -->
-      <div class="menu-icon">
-        <div class="bar one"></div>
-        <div class="bar two"></div>
-      </div>
-    </div>
     </div>
   </header>
 
@@ -61,42 +58,39 @@
 
     <section class="body">
       <img src="./assets/imgs/city guide header.png" alt="">
-      <h2>City Guide for iOS, Artsy</h2>
+      <div class="caption">City Guide for iOS, Artsy</div>
       <img src="./assets/imgs/ink home.png" alt="">
-      <h2>Ink design system documentation, The New York Times</h2>
+      <div class="caption">Ink design system documentation, The New York Times</div>
       <img src="./assets/imgs/push.png" alt="">
-      <h2>Push notification workflow, The New York Times</h2>
+      <div class="caption">Push notification workflow, The New York Times</div>
       <img src="./assets/imgs/collections.png" alt="">
-      <h2>Collections pages, Artsy</h2>
+      <div class="caption">Collections pages, Artsy</div>
       <img src="./assets/imgs/analytics.png" alt="">
-      <h2>Galleries analytics dashboard, Artsy</h2>
+      <div class="caption">Galleries analytics dashboard, Artsy</div>
       <img src="./assets/imgs/feature articles.png" alt="">
-      <h2>Feature articles, Artsy</h2>
+      <div class="caption">Feature articles, Artsy</div>
       <img src="./assets/imgs/news feed.png" alt="">
-      <h2>News feed, Artsy</h2>
+      <div class="caption">News feed, Artsy</div>
     </section>
 
-    <footer>
-      <div class="link-menu">
-        <!-- <div class="link-icon">
-                <h2>Links</h2>
-              </div> -->
-        <a class="link-item" href="mailto:mail@owendodd.com">
-          <h2>mail@owendodd.com</h2>
-        </a>
-        <a class="link-item" href="https://www.instagram.com/owendodd/">
-          <h2>instagram.com/owendodd</h2>
-        </a>
-        <a class="link-item" href="https://www.are.na/owen-dodd/">
-          <h2>are.na/owen-dodd</h2>
-        </a>
-        <a class="link-item" href="https://www.linkedin.com/in/ododd/">
-          <h2>linkedin.com/in/ododd</h2>
-        </a>
-      </div>
-    </footer>
-
   </div>
+
+  <footer>
+    <div class="link-menu">
+      <a class="link-item" href="mailto:mail@owendodd.com">
+        <h2>mail@owendodd.com</h2>
+      </a>
+      <a class="link-item" href="https://www.instagram.com/owendodd/">
+        <h2>instagram.com/owendodd</h2>
+      </a>
+      <a class="link-item" href="https://www.are.na/owen-dodd/">
+        <h2>are.na/owen-dodd</h2>
+      </a>
+      <a class="link-item" href="https://www.linkedin.com/in/ododd/">
+        <h2>linkedin.com/in/ododd</h2>
+      </a>
+    </div>
+  </footer>
 
   <script type="text/javascript" src="/assets/js/script.js"></script>
 </body>
